--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "lucide-react": "^0.537.0",
-    "next": "15.4.5",
+    "next": "^15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
@@ -23,6 +23,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5.9.2"
   }
 }
